feat: 토큰으로 유저정보 확인 추가
