# src/swagger/admin/auth.yaml
@@ -107,3 +107,45 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
+  /api/auth/tokenCheck:
+    get:
+      security:
+        - bearerAuth: []
+      tags:
+        - Auth
+      summary: 토큰을 통하여 유저 정보를 확인한다
+      responses:
+        200:
+          description: 토큰확인 성공
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Login'
+              example:
+                projectIds: [
+                  "5fc5d83a104030b16fdccd00",
+                  "5fc5ff2899b3d368aa12ebb6",
+                  "5fc5ff2c99b3d368aa12ebb7",
+                  "5fc6029427527268a31ca315",
+                  "5fc6029a6bd08568e232761f",
+                  "5fc6029d6bd08568e2327620",
+                  "5fc602e1e98c7368eff5ea9f",
+                  "5fc602e4e98c7368eff5eaa0",
+                  "5fc602e6e98c7368eff5eaa1",
+                  "5fc602f876facc68608e26ae",
+                  "5fc602fb76facc68608e26af"
+                ]
+                _id: "5fc5d814104030b16fdcccff"
+                email: "soos0228@naver.com"
+                pwd: "$2b$14$GbmETfMbyCcuMO8ZvJeI5uRAaXLvH6kOvhdTaTUMKjlXAJfUh4LFi"
+                nickname: "kangsukmin"
+                createdAt: "2020-12-01T05:43:48.432Z"
+                updatedAt: "2020-12-01T08:46:51.994Z"
+                __v: 0
+                token: "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJwcm9qZWN0SWRzIjpbIjVmYzVkODNhMTA0MDMwYjE2ZmRjY2QwMCIsIjVmYzVmZjI4OTliM2QzNjhhYTEyZWJiNiIsIjVmYzVmZjJjOTliM2QzNjhhYTEyZWJiNyIsIjVmYzYwMjk0Mjc1MjcyNjhhMzFjYTMxNSIsIjVmYzYwMjlhNmJkMDg1NjhlMjMyNzYxZiIsIjVmYzYwMjlkNmJkMDg1NjhlMjMyNzYyMCIsIjVmYzYwMmUxZTk4YzczNjhlZmY1ZWE5ZiIsIjVmYzYwMmU0ZTk4YzczNjhlZmY1ZWFhMCIsIjVmYzYwMmU2ZTk4YzczNjhlZmY1ZWFhMSIsIjVmYzYwMmY4NzZmYWNjNjg2MDhlMjZhZSIsIjVmYzYwMmZiNzZmYWNjNjg2MDhlMjZhZiJdLCJfaWQiOiI1ZmM1ZDgxNDEwNDAzMGIxNmZkY2NjZmYiLCJlbWFpbCI6InNvb3MwMjI4QG5hdmVyLmNvbSIsInB3ZCI6IiQyYiQxNCRHYm1FVGZNYnlDY3VNTzhadkplSTV1UkFhWEx2SDZrT3ZoZFRhVFVNS2psWEFKZlVoNExGaSIsImNyZWF0ZWRBdCI6IjIwMjAtMTItMDFUMDU6NDM6NDguNDMyWiIsInVwZGF0ZWRBdCI6IjIwMjAtMTItMDFUMDg6NDY6NTEuOTk0WiIsIl9fdiI6MCwiaWF0IjoxNjA2ODk4NDA2fQ.LUbdFifjLLaFQjbNbJEyVfV98UgaekjgAYJNzb5TMZw"
+        default:
+          description: Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
